--- a/src/component/dashboard/_dashboard.scss
+++ b/src/component/dashboard/_dashboard.scss
@@ -1,5 +1,3 @@
-@import 'vars';
-
 .dashboard {
     margin: auto;
     width: 90%;
@@ -17,11 +15,16 @@
     }
 }
 
-.category-wrapper {
+#category-wrapper {
     display: flex;
     justify-content: space-between;    
 }
 
 #main-form {
     width: 500px;
+}
+
+.categories {
+    background-color: lightgreen;
+    margin: 10px;
 }
